# rust-system-monitor

./: Cargo.toml  Makefile  README.md  package-lock.json  package.json  tailwind.config.js
.devcontainer/: devcontainer.json
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/search.desc/system_monitor/: system_monitor-desc-0-.js
docs/search.desc/webhook_server/: webhook_server-desc-0-.js
docs/src/system_monitor/: config.rs.html  lib.rs.html  metrics.rs.html  notify.rs.html
docs/src/webhook_server/: webhook_server.rs.html
docs/system_monitor/: all.html  index.html  sidebar-items.js
docs/system_monitor/config/: enum.NotificationType.html  index.html  sidebar-items.js  struct.Config.html  struct.EmailConfig.html  struct.MonitorConfig.html  struct.NotificationConfig.html
docs/system_monitor/metrics/: fn.collect_metrics.html  fn.get_cpu_usage_per_core.html  index.html  sidebar-items.js  struct.SystemMetrics.html
docs/system_monitor/notify/: fn.send_notification.html  index.html  sidebar-items.js
docs/trait.impl/askama/: trait.FastWritable.js  trait.Template.js
docs/trait.impl/core/clone/: trait.Clone.js
docs/webhook_server/: all.html  fn.get_metrics_json.html  fn.get_state_json.html  fn.main.html  fn.receive_webhook.html  fn.render_dashboard.html  index.html  sidebar-items.js  struct.AppState.html  struct.DashboardTemplate.html
src/: config.rs  config.toml  lib.rs  main.rs  metrics.rs  notify.rs  webhook_server.rs
static/: main.css
templates/: dashboard.html  metrics.html
tests/: config.rs  integration.rs
(+14 files in other folders)
