[package]
name = "system_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
sysinfo = "0.30.0" # Check crates.io for the latest version
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0" # Often needed for older versions of serde, might be covered by "derive" feature
serde_json = "1.0"
toml = "0.8"        # Or "json = 1.0" if you prefer JSON config
reqwest = { version = "0.12", features = ["json", "blocking"] } # "blocking" for simplicity, "tokio" for async
tokio = { version = "1.46.1", features = ["full"] } # If using async reqwest or other async features
lettre = { version = "0.11", features = ["builder", "smtp-transport", "rustls-tls"] } # For email
log = "0.4"
env_logger = "0.11"
axum = "0.8.4"
askama = "0.14"
tower-http = { version = "0.6.6", features = ["fs", "trace"] } # For serving static files and CORS
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] } # env-filter is useful for controlling logging via environment variables

tracing = "0.1.41"
hyper = { version = "1.0", features = ["full"] }
chrono = "0.4.41"


[[bin]]
name = "system_monitor"
path = "src/main.rs"

[[bin]]
name = "webhook_server"
path = "src/webhook_server.rs"